day03/dov-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-deploy
  namespace: dovns
  labels:
    app: dov
    dept: eng
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dov
      dept: eng
  template:
    metadata:
      labels:
        app: dov
        dept: eng
    spec:
      containers:
        - name: dov-container
          image: chukmunnlee/dov-bear:v5 # TODO: Use hash instead of tag
          imagePullPolicy: IfNotPresent # Always if tag is latest
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: dov-svc
#   namespace: myns
#   labels:
#     app: dov
#     dept: eng
# spec:
#   type: ClusterIP
#   selector:
#     app: dov
#     dept: eng
#   ports:
#     - port: 8080 # Service port
#       protocol: TCP
#       targetPort: 3000 # Container port
#       # nodePort: 30000 # Only for NodePort type
apiVersion: v1
kind: Service
metadata:
  name: dov-svc
  namespace: dovns
  labels:
    app: dov
    dept: eng
spec:
  type: NodePort
  selector:
    app: dov
    dept: eng
  ports:
    - port: 8080 # Service port
      protocol: TCP
      targetPort: 3000 # Container port
      # nodePort: 30000 # Only for NodePort type, Optional it will auto assign if not specified
